# bugzilla2gitlab

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README  README.md  bugs.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
bugzilla2gitlab/: __init__.py  __init__py  config.py  helpers.py  migrator.py  models.py  utils.py  version.py
bugzilla2gitlab/config/: closed_statuses.yml  component_mappings.yml  defaults.yml  user_mappings.yml
example_config/: component_mappings.yml  defaults.yml  user_mappings.yml
tests/: test_bugzilla2gitlab.py
tests/test_data/: bug-103.xml  bug-5933.xml
tests/test_data/config/: defaults.yml  user_mappings.yml
