[metadata]
name = bugzilla2gitlab
version = 1.2.0
description = An opinionated Bugzilla to Gitlab Issues bug migration tool
long_description = file: README.md
keywords = bugzilla, gitlab, bugtracking, workflow
license = MIT
author = Cristina Muñoz
author_email = hi@xmunoz.com
maintainer = Cristina Muñoz
maintainer_email = hi@xmunoz.com
url = https://github.com/xmunoz/bugzilla2gitlab
download_url = https://github.com/xmunoz/bugzilla2gitlab/archive/master.tar.gz
classifiers =
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Bug Tracking

[options]
packages = bugzilla2gitlab
include_package_data = True
scripts =
    bin/bugzilla2gitlab
    bin/clone_users.py

[flake8]
max-line-length = 100
import-order-style = google
application-import-names = bugzilla2gitlab 
[bdist_wheel]
universal=1
